--- a/index.html
+++ b/index.html
@@ -254,8 +254,14 @@
         <div id="image-modal1" class="modal-box mfp-hide">
           <img src="assets/images/folio/work-big-1.jpg" alt="">
           <div class="modal-box-content">
-            <h4>Project title</h4>
-            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
+            <h4>Point of Sale</h4>
+            <p>This is a project a done according to the using Javafx which facilitates the customer to place the orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
+            <p>Technology Stack 💥
+
+              JavaFX ,
+              JDBC ,
+              Scene Builder ,
+              Jasper Reports</p>
           </div>
         </div>  
       </div>
