--- a/index.html
+++ b/index.html
@@ -282,9 +282,15 @@
           <div id="image-modal2" class="modal-box mfp-hide">
             <img src="assets/images/folio/work-big-2.jpg" alt="">
             <div class="modal-box-content">
-              <h4>Project title</h4>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. </p>
+              <h4>Library Management System</h4>
+              <p>This is a simple library book management system.you can keep in touch with all events such as 
+                borrowings and returning in the library
+              </p>
+              <p>Technology Stack 💥
+
+                  JavaFX ,
+                  JDBC ,
+                  Scene Builder </p>
             </div>
           </div>
         </div>
@@ -296,9 +302,18 @@
           <div id="image-modal3" class="modal-box mfp-hide">
             <img src="assets/images/folio/work-big-3.jpg" alt="">
             <div class="modal-box-content">
-              <h4>Project title</h4>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. </p>
+              <h4>Students Registation System</h4>
+              <p>This is a project done using Javafx and according to the standard of Layered Architecture. In this 
+                project we can Register Student and also added to the Batch. A student can have more than one batch. 
+                If we want to add existing student to a batch the student is added to the batch is self. We can add 
+                batch to this system and also a batch has a course. We can add courses and also a course has modules.
+                 We can select modules to the course. When we add a course simultaneously relevant exam is added. We 
+                 also can include the results of students and view through the reports. </p>
+                 <p>Technology Stack 💥
+
+                    JavaFX ,
+                    JDBC ,
+                    Scene Builder </p>
             </div>
           </div>
         </div>
@@ -310,9 +325,15 @@
           <div id="image-modal4" class="modal-box mfp-hide">
             <img src="assets/images/folio/work-big-4.jpg" alt="">
             <div class="modal-box-content">
-              <h4>Project title</h4>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. </p>
+              <h4>Point of Sale with MySQL</h4>
+              <p>This is a project a done according to the using Javafx which facilitates the customer to place the
+                  orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
+                  <p>Technology Stack 💥
+
+                      JavaFX ,
+                      JDBC ,
+                      Scene Builder ,
+                    Application Architecture</p>
             </div>
           </div>
         </div>
@@ -324,9 +345,16 @@
           <div id="image-modal5" class="modal-box mfp-hide">
             <img src="assets/images/folio/work-big-4.jpg" alt="">
             <div class="modal-box-content">
-              <h4>Project title</h4>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. </p>
+              <h4>Point of Sale with Native Hibernate</h4>
+              <p>This is a project a done according to the using Javafx which facilitates the customer to place the
+                  orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
+                  <p>Technology Stack 💥
+
+                      JavaFX ,
+                      JDBC ,
+                      Scene Builder ,
+                      Application Architecture,
+                      Hibernate</p>
             </div>
           </div>
         </div>
@@ -337,9 +365,16 @@
           <div id="image-modal6" class="modal-box mfp-hide">
             <img src="assets/images/folio/work-big-4.jpg" alt="">
             <div class="modal-box-content">
-              <h4>Project title</h4>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. </p>
+              <h4>Point of Sale with JPA</h4>
+              <p>This is a project a done according to the using Javafx which facilitates the customer to place the
+                  orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
+                  <p>Technology Stack 💥
+
+                      JavaFX ,
+                      JDBC ,
+                      Scene Builder ,
+                      Application Architecture,
+                      JPA</p>
             </div>
           </div>
         </div>
@@ -350,9 +385,18 @@
           <div id="image-modal7" class="modal-box mfp-hide">
             <img src="assets/images/folio/work-big-4.jpg" alt="">
             <div class="modal-box-content">
-              <h4>Project title</h4>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. </p>
+              <h4>Point of Sale using Hibernate integrated with Spring</h4>
+              <p>This is a project a done according to the using Javafx which facilitates the customer to place the
+                  orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
+                  <p>Technology Stack 💥
+
+                      JavaFX ,
+                      JDBC ,
+                      Scene Builder ,
+                      Application Architecture,
+                      Hibernate ,
+                      Spring
+                    </p>
             </div>
           </div>
         </div>
@@ -363,13 +407,22 @@
           <div id="image-modal8" class="modal-box mfp-hide">
             <img src="assets/images/folio/work-big-4.jpg" alt="">
             <div class="modal-box-content">
-              <h4>Project title</h4>
-              <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-                consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. </p>
+              <h4>Point of Sale using JPA integrated with Spring</h4>
+              <p>This is a project a done according to the using Javafx which facilitates the customer to place the
+                  orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
+                  <p>Technology Stack 💥
+
+                      JavaFX ,
+                      JDBC ,
+                      Scene Builder ,
+                      Application Architecture,
+                      JPA
+                      Spring
+                    </p>
             </div>
           </div>
         </div>
-        <div class="single_item web-design col-sm-6 col-xs-12 col-md-4">
+        <!-- <div class="single_item web-design col-sm-6 col-xs-12 col-md-4">
           <a class="image-link works" data-toggle="modal" data-target=".modal1" href="#image-modal9">
             <img src="assets/images/folio/work-4.jpg" alt="">
           </a>
@@ -381,7 +434,7 @@
                 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. </p>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="single_item web-design col-sm-6 col-xs-12 col-md-4">
           <a class="image-link works" data-toggle="modal" data-target=".modal1" href="#image-modal20">
             <img src="assets/images/folio/work-5.jpg" alt="">
@@ -389,15 +442,16 @@
           <div id="image-modal20" class="modal-box mfp-hide">
             <img src="assets/images/folio/work-big-5.jpg" alt="">
             <div class="modal-box-content">
-              <h4>Point of Sale</h4>
+              <h4>Admin Dashboard</h4>
               <p>This is a project a done according to the using Javafx which facilitates the customer to place the
                 orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
               <p>Technology Stack 💥
 
-                JavaFX ,
+                <!-- JavaFX ,
                 JDBC ,
                 Scene Builder ,
-                Jasper Reports</p>
+                Jasper Reports -->
+              </p>
             </div>
           </div>
         </div>
@@ -468,7 +522,7 @@
         <div class="col-md-6 col-sm-6 contactRight">
           <div class="contactBox">
             <h5><i class="fa fa-home" aria-hidden="true"></i>Address:</h5>
-            <p>"Ishan" Palatuwa, Matara, Sri Lanka</p>
+            <p>"Samana" Godagama, Homagama, Sri Lanka</p>
           </div>
           <div class="contactBox">
             <h5><i class="fa fa-phone" aria-hidden="true"></i>Phone:</h5>
@@ -500,6 +554,7 @@
         <a href="index-2.html#"><span class="fa fa-twitter"></span></a>
         <a href="index-2.html#"><span class="fa fa-behance"></span></a>
         <a href="index-2.html#"><span class="fa fa-dribbble"></span></a>
+
       </div>
 
       <!-- copyright -->
