--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
   <!-- Mobile Specific Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <!-- FONT -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500" rel="stylesheet">
 
@@ -283,14 +284,14 @@
             <img src="assets/images/folio/work-big-2.jpg" alt="">
             <div class="modal-box-content">
               <h4>Library Management System</h4>
-              <p>This is a simple library book management system.you can keep in touch with all events such as 
+              <p>This is a simple library book management system.you can keep in touch with all events such as
                 borrowings and returning in the library
               </p>
               <p>Technology Stack 💥
 
-                  JavaFX ,
-                  JDBC ,
-                  Scene Builder </p>
+                JavaFX ,
+                JDBC ,
+                Scene Builder </p>
             </div>
           </div>
         </div>
@@ -303,17 +304,17 @@
             <img src="assets/images/folio/work-big-3.jpg" alt="">
             <div class="modal-box-content">
               <h4>Students Registation System</h4>
-              <p>This is a project done using Javafx and according to the standard of Layered Architecture. In this 
-                project we can Register Student and also added to the Batch. A student can have more than one batch. 
-                If we want to add existing student to a batch the student is added to the batch is self. We can add 
+              <p>This is a project done using Javafx and according to the standard of Layered Architecture. In this
+                project we can Register Student and also added to the Batch. A student can have more than one batch.
+                If we want to add existing student to a batch the student is added to the batch is self. We can add
                 batch to this system and also a batch has a course. We can add courses and also a course has modules.
-                 We can select modules to the course. When we add a course simultaneously relevant exam is added. We 
-                 also can include the results of students and view through the reports. </p>
-                 <p>Technology Stack 💥
+                We can select modules to the course. When we add a course simultaneously relevant exam is added. We
+                also can include the results of students and view through the reports. </p>
+              <p>Technology Stack 💥
 
-                    JavaFX ,
-                    JDBC ,
-                    Scene Builder </p>
+                JavaFX ,
+                JDBC ,
+                Scene Builder </p>
             </div>
           </div>
         </div>
@@ -327,13 +328,13 @@
             <div class="modal-box-content">
               <h4>Point of Sale with MySQL</h4>
               <p>This is a project a done according to the using Javafx which facilitates the customer to place the
-                  orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
-                  <p>Technology Stack 💥
+                orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
+              <p>Technology Stack 💥
 
-                      JavaFX ,
-                      JDBC ,
-                      Scene Builder ,
-                    Application Architecture</p>
+                JavaFX ,
+                JDBC ,
+                Scene Builder ,
+                Application Architecture</p>
             </div>
           </div>
         </div>
@@ -347,14 +348,14 @@
             <div class="modal-box-content">
               <h4>Point of Sale with Native Hibernate</h4>
               <p>This is a project a done according to the using Javafx which facilitates the customer to place the
-                  orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
-                  <p>Technology Stack 💥
+                orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
+              <p>Technology Stack 💥
 
-                      JavaFX ,
-                      JDBC ,
-                      Scene Builder ,
-                      Application Architecture,
-                      Hibernate</p>
+                JavaFX ,
+                JDBC ,
+                Scene Builder ,
+                Application Architecture,
+                Hibernate</p>
             </div>
           </div>
         </div>
@@ -367,14 +368,14 @@
             <div class="modal-box-content">
               <h4>Point of Sale with JPA</h4>
               <p>This is a project a done according to the using Javafx which facilitates the customer to place the
-                  orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
-                  <p>Technology Stack 💥
+                orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
+              <p>Technology Stack 💥
 
-                      JavaFX ,
-                      JDBC ,
-                      Scene Builder ,
-                      Application Architecture,
-                      JPA</p>
+                JavaFX ,
+                JDBC ,
+                Scene Builder ,
+                Application Architecture,
+                JPA</p>
             </div>
           </div>
         </div>
@@ -387,16 +388,16 @@
             <div class="modal-box-content">
               <h4>Point of Sale using Hibernate integrated with Spring</h4>
               <p>This is a project a done according to the using Javafx which facilitates the customer to place the
-                  orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
-                  <p>Technology Stack 💥
+                orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
+              <p>Technology Stack 💥
 
-                      JavaFX ,
-                      JDBC ,
-                      Scene Builder ,
-                      Application Architecture,
-                      Hibernate ,
-                      Spring
-                    </p>
+                JavaFX ,
+                JDBC ,
+                Scene Builder ,
+                Application Architecture,
+                Hibernate ,
+                Spring
+              </p>
             </div>
           </div>
         </div>
@@ -409,16 +410,16 @@
             <div class="modal-box-content">
               <h4>Point of Sale using JPA integrated with Spring</h4>
               <p>This is a project a done according to the using Javafx which facilitates the customer to place the
-                  orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
-                  <p>Technology Stack 💥
+                orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
+              <p>Technology Stack 💥
 
-                      JavaFX ,
-                      JDBC ,
-                      Scene Builder ,
-                      Application Architecture,
-                      JPA
-                      Spring
-                    </p>
+                JavaFX ,
+                JDBC ,
+                Scene Builder ,
+                Application Architecture,
+                JPA
+                Spring
+              </p>
             </div>
           </div>
         </div>
@@ -550,10 +551,11 @@
 
       <!-- SOCIAL ICONS -->
       <div class="footerRight">
-        <a href="index-2.html#"><span class="fa fa-facebook"></span></a>
-        <a href="index-2.html#"><span class="fa fa-twitter"></span></a>
-        <a href="index-2.html#"><span class="fa fa-behance"></span></a>
-        <a href="index-2.html#"><span class="fa fa-dribbble"></span></a>
+        <a href="index-2.html#"><span class="fab fa-linkedin-in"></span></a>
+        <a href="index-2.html#"><span class="fab fa-github"></span></a>
+        <a href="index-2.html#"><span class="fab fa-stack-overflow"></span></a>
+        <a href="index-2.html#"><span class="fab fa-youtube"></span></a>
+        <a href="index-2.html#"><span class="fab fa-facebook-f"></span></a>
 
       </div>
 
