Second update link

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         <div class="col-md-6 col-sm-6 contactRight">
           <div class="contactBox">
             <h5><i class="fa fa-home" aria-hidden="true"></i>Address:</h5>
-            <p>"Samana" Godagama, Homagama, Sri Lanka</p>
+            <p>"Saman" Godagama, Homagama, Sri Lanka</p>
           </div>
           <div class="contactBox">
             <h5><i class="fa fa-phone" aria-hidden="true"></i>Phone:</h5>
@@ -551,11 +551,11 @@
 
       <!-- SOCIAL ICONS -->
       <div class="footerRight">
-        <a href="index-2.html#"><span class="fab fa-linkedin-in"></span></a>
-        <a href="index-2.html#"><span class="fab fa-github"></span></a>
-        <a href="index-2.html#"><span class="fab fa-stack-overflow"></span></a>
-        <a href="index-2.html#"><span class="fab fa-youtube"></span></a>
-        <a href="index-2.html#"><span class="fab fa-facebook-f"></span></a>
+        <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+        <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
+        <a href="https://stackoverflow.com/users/9844376/ishan-lakshitha?tab=profile"><span class="fab fa-stack-overflow"></span></a>
+        <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span class="fab fa-youtube"></span></a>
+        <a href="https://www.facebook.com/vgishan"><span class="fab fa-facebook-f"></span></a>
 
       </div>
 
