--- a/index.html
+++ b/index.html
@@ -271,7 +271,17 @@
                 JavaFX ,
                 JDBC ,
                 Scene Builder ,
-                Jasper Reports</p>
+                Jasper Reports
+                </br>
+
+                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
+                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                    class="fab fa-youtube"></span></a>
+
+
+
+              </p>
             </div>
           </div>
         </div>
@@ -291,7 +301,17 @@
 
                 JavaFX ,
                 JDBC ,
-                Scene Builder </p>
+                Scene Builder
+                </br>
+
+                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
+                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                    class="fab fa-youtube"></span></a>
+
+
+              </p>
+
             </div>
           </div>
         </div>
@@ -314,7 +334,16 @@
 
                 JavaFX ,
                 JDBC ,
-                Scene Builder </p>
+                Scene Builder
+                </br>
+
+                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
+                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                    class="fab fa-youtube"></span></a>
+
+
+              </p>
             </div>
           </div>
         </div>
@@ -334,7 +363,17 @@
                 JavaFX ,
                 JDBC ,
                 Scene Builder ,
-                Application Architecture</p>
+                Application Architecture
+
+                </br>
+
+                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
+                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                    class="fab fa-youtube"></span></a>
+
+
+              </p>
             </div>
           </div>
         </div>
@@ -355,7 +394,17 @@
                 JDBC ,
                 Scene Builder ,
                 Application Architecture,
-                Hibernate</p>
+                Hibernate
+
+                </br>
+
+                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
+                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                    class="fab fa-youtube"></span></a>
+
+
+              </p>
             </div>
           </div>
         </div>
@@ -375,7 +424,16 @@
                 JDBC ,
                 Scene Builder ,
                 Application Architecture,
-                JPA</p>
+                JPA
+
+                </br>
+
+                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
+                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                    class="fab fa-youtube"></span></a>
+
+              </p>
             </div>
           </div>
         </div>
@@ -397,6 +455,14 @@
                 Application Architecture,
                 Hibernate ,
                 Spring
+
+                </br>
+
+                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
+                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                    class="fab fa-youtube"></span></a>
+
               </p>
             </div>
           </div>
@@ -419,6 +485,14 @@
                 Application Architecture,
                 JPA
                 Spring
+
+                </br>
+
+                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
+                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                    class="fab fa-youtube"></span></a>
+
               </p>
             </div>
           </div>
@@ -452,6 +526,14 @@
                 JDBC ,
                 Scene Builder ,
                 Jasper Reports -->
+
+                </br>
+
+                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
+                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
+                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                    class="fab fa-youtube"></span></a>
+
               </p>
             </div>
           </div>
@@ -477,9 +559,9 @@
       <!-- title contact section -->
       <div class="contact-title">
         <h4>Get in touch</h4>
-        <p> Aenean malesuada, erat quis finibus rhoncus, risus neque aliquam augue, <br>eu fringilla arcu mauris ac
+        <!-- <p> Aenean malesuada, erat quis finibus rhoncus, risus neque aliquam augue, <br>eu fringilla arcu mauris ac
           dolor.
-        </p>
+        </p> -->
         <div class="separator-line"></div>
       </div> <!-- end title -->
 
@@ -553,8 +635,10 @@
       <div class="footerRight">
         <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
         <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
-        <a href="https://stackoverflow.com/users/9844376/ishan-lakshitha?tab=profile"><span class="fab fa-stack-overflow"></span></a>
-        <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span class="fab fa-youtube"></span></a>
+        <a href="https://stackoverflow.com/users/9844376/ishan-lakshitha?tab=profile"><span
+            class="fab fa-stack-overflow"></span></a>
+        <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+            class="fab fa-youtube"></span></a>
         <a href="https://www.facebook.com/vgishan"><span class="fab fa-facebook-f"></span></a>
 
       </div>
