Project link updates

--- a/index.html
+++ b/index.html
@@ -263,21 +263,18 @@
           <div id="image-modal1" class="modal-box mfp-hide">
             <img src="assets/images/folio/work-big-1.jpg" alt="">
             <div class="modal-box-content">
-              <h4>Point of Sale</h4>
+              <h4>Point of Sale(In Memory)</h4>
               <p>This is a project a done according to the using Javafx which facilitates the customer to place the
                 orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
               <p>Technology Stack 💥
-
                 JavaFX ,
-                JDBC ,
-                Scene Builder ,
-                Jasper Reports 
+                Jasper Reports
                 </br>
 
                 <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
-                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
-                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
-                    class="fab fa-youtube"></span></a>
+                <a href="https://github.com/IshanLakshitha/POS-in-memory"><span class="fab fa-github"></span></a>
+                <!-- <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                    class="fab fa-youtube"></span></a> -->
 
 
 
@@ -299,14 +296,16 @@
               </p>
               <p>Technology Stack 💥
 
-                JavaFX ,
-                JDBC ,
-                Scene Builder
+                Layered Architecture,
+                JavaFx,
+                MySQL,
+                Jasper Reports
                 </br>
 
                 <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
-                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
-                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                <a href="https://github.com/IshanLakshitha/Library-System-JavaFX"><span
+                    class="fab fa-github"></span></a>
+                <a href="https://www.youtube.com/watch?v=hqpcCqDUKak&t=2s"><span
                     class="fab fa-youtube"></span></a>
 
 
@@ -332,15 +331,17 @@
                 also can include the results of students and view through the reports. </p>
               <p>Technology Stack 💥
 
-                JavaFX ,
-                JDBC ,
-                Scene Builder
+                Layered Architecture,
+                JavaFx,
+                MySQL,
+                Jasper Reports
                 </br>
 
                 <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
-                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
-                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
-                    class="fab fa-youtube"></span></a>
+                <a href="https://github.com/IshanLakshitha/Students-Registation-System"><span
+                    class="fab fa-github"></span></a>
+                <!-- <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                    class="fab fa-youtube"></span></a> -->
 
 
               </p>
@@ -360,17 +361,16 @@
                 orders. This also provides the ability of adding new customers and to enter new items to the system.</p>
               <p>Technology Stack 💥
 
-                JavaFX ,
-                JDBC ,
-                Scene Builder ,
-                Application Architecture
+                JavaFx,
+                MySQL,
+                Jasper Reports
 
                 </br>
 
                 <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
-                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
-                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
-                    class="fab fa-youtube"></span></a>
+                <a href="https://github.com/IshanLakshitha/Point-of-Sale-JavaFX"><span class="fab fa-github"></span></a>
+                <!-- <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                    class="fab fa-youtube"></span></a> -->
 
 
               </p>
