--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
 
                 </br>
 
-                <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a>
-                <a href="https://github.com/IshanLakshitha"><span class="fab fa-github"></span></a>
-                <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span
+                <!-- <a href="https://www.linkedin.com/in/ishan-lakshitha/"><span class="fab fa-linkedin-in"></span></a> -->
+                <a href="https://github.com/IshanLakshitha/POS-Application-Architecture-Native-Hibernate"><span class="fab fa-github"></span></a>
+                <!-- <a href="https://www.youtube.com/channel/UCGzz4wxnQ0nU4jcAGE0A8TA?view_as=subscriber"><span -->
                     class="fab fa-youtube"></span></a>
 
 
