--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
           <p>Developed complicated software projects following industry standards.
             Front end, back end, web and software testing.
             Developed Technical Skills - JavaSE , JavaEE , JavaFX , JDBC, MySQL CSS3 , HTML5, Bootstrap
-            JavaScript , JQuery , TypeScript , Spring Framework , SASS , GIT , Spring webMVC , Angular 7
-            Spring Data JPA , AJAX, JSON , Hibernate , Node.JS , Maven , Web Services (REST API) , XML</p>
+            JavaScript , JQuery , TypeScript , Spring Framework , SASS , GIT, Angular 7, AJAX, JSON , Hibernate , Node.JS , Maven</p>
         </div>
       </div>
 
